syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.edumatt3";
option java_outer_classname = "PixKeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.edumatt3;

service PixKeyManagerGrpcService {
  rpc register (PixKeyRequest) returns (PixKeyResponse) {}
}

message PixKeyRequest {
  string clientId = 1;
  KeyType keyType = 2;
  string key = 3;
  AccountType accountType = 4;
}

enum KeyType {
  UNKNOWN  = 0;
  CPF = 1;
  PHONENUMBER = 2;
  EMAIL = 3;
}

enum AccountType {
  UNSPECIFIED = 0;
  CORRENTE = 1;
  POUPANCA = 2;
}

message PixKeyResponse {
  string message = 1;
}